@@ -1,3 +1,4 @@
+- 04-26-04: Memory Leaks fixes in early Exits in CalcAI routine. [ChrstphrR]
 - 04-25-04: Fixed Chain Combo Timing issue with cast failure upon new Triple Attack. [AlexKreuz]
 - 04-24-04: Added .ini option for monster skills.  [Darkhelmet]
 - 04-24-04: Numerous AI fixes, crashes should stop.  [Darkhelmet]
